# sle-cryptosystem-wasm

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crypto/: Cargo.toml
crypto-vis/: Cargo.toml  bootstrap.js  index.html
crypto-vis/src/: lib.rs
crypto/src/: codec.rs  lib.rs
crypto/src/gen_g/: errors.rs  mod.rs
crypto/src/keypair/: mod.rs
crypto/src/ring/: errors.rs  helper.rs  math.rs  mod.rs
crypto/src/sle/: errors.rs  mod.rs
crypto/src/system/: errors.rs  matrix_ops.rs  mod.rs  params.rs  protocol.rs  protocol_helpers.rs
crypto/tests/: core_logic_test.rs  integration_test.rs  protocol_integration_test.rs  string_codec_test.rs  theory_examples_test.rs
diploma/: main.aux  main.bcf  main.bib  main.out  main.run.xml  main.tex  main.toc
gui/: Cargo.toml
gui/src/: main.rs
gui/src/scenes/: decrypt_popup.rs  encrypt_popup.rs  gen_keypair_popup.rs  gen_keys_popup.rs  main_content.rs  mod.rs  right_sidebar.rs
gui/src/state/: definition.rs  mod.rs
gui/src/widgets/: error_popup.rs  help_panel.rs  mod.rs
papers/: metodichka_po_diplomnim_robotam_2025_v2.txt  theory.tex
sle-crypto/: Cargo.toml
sle-crypto/benches/: happy_flow.rs  sizes.rs
sle-crypto/src/: errors.rs  lib.rs
sle-crypto/src/gen_g/: mod.rs
sle-crypto/src/keypair/: helper.rs  keys.rs  mod.rs  shared_params.rs
sle-crypto/src/preset/: encoding_table.rs  mod.rs
sle-crypto/src/ring/: helper.rs  math.rs  matrix_ops.rs  mod.rs
sle-crypto/src/sle/: mod.rs
sle-crypto/tests/: benchmark.rs  integration_test.rs  showcase_test.rs
