[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_commonmark = { version = "0.20.0", features = ["macros", "load-images"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = { version = "0.4.26", features = ["release_max_level_off"] }
sle-crypto = { path = "../sle-crypto"}
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }