[package]
name = "sle-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
thiserror = "2.0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1.46"

base64 = "0.22.1"
lazy_static = "1.5.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5.1"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bench]]
name = "happy_flow"
path = "benches/happy_flow.rs"
harness = false
